@@ -6,6 +6,8 @@ Revision history for Sys-Syslog
         Thanks to Paul Townsend. 
         [BUGFIX] CPAN-RT#34753: Fixed a slowness introduced in v0.19 (which 
         was to work around OSX syslog own slowness). Thanks to Alex Efros.
+        [FEATURE] setlogsock() now interprets the second argument as the 
+        hostname for network mechanisms.
         [DIST] Add AUTHOR to WriteMakefile() in order to fix the META.yml
         generated by ExtUtils::MakeMaker.
 
